Moved images and help content references up to top level

--- a/quct.ipynb
+++ b/quct.ipynb
@@ -78,12 +78,12 @@
     "\n",
     "# Initialize the app title, help Text widget and start_value Text widget\n",
     "\n",
-    "file         = open(\"../images/qudt_logo-300x110.png\", \"rb\")\n",
+    "file         = open(\"images/qudt_logo-300x110.png\", \"rb\")\n",
     "image        = file.read()\n",
     "label_style  = {'description_width' : 'initial'}\n",
     "title_text   = viewtify.Html(tag = \"div\", children = ['Unit Conversion Tool'], style_ = \" color: 'colors.indigo.darken4'; font-family: helvetica; font-size: 20px\")\n",
     "titleBox     = widgets.HBox([widgets.Image(value = image, format = 'png', width = 75, height = 27), title_text])\n",
-    "help_label   = widgets.HTML(value = '<a href = \"../help/help.html\"><b>Help</b></a>')\n",
+    "help_label   = widgets.HTML(value = '<a href = \"help/help.html\"><b>Help</b></a>')\n",
     "start_value  = widgets.Text(value = '1', description = 'Value to convert', style = label_style, disabled = False)\n",
     "\n",
     "# Construct the quant_dd Dropdown widget\n",
