made some minor changes requested by Steve Ray

--- a/quct.ipynb
+++ b/quct.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "023e2690",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4baa7fdb3794822aa7b1afbb66ab3f0",
+       "model_id": "6b0ab910317a419db16d9d46cd18e948",
        "version_major": 2,
        "version_minor": 0
       },
@@ -33,7 +33,7 @@
     "# Initialize the quant_dd content by calling the quantity kind request, parsing the resulting json, and acquiring\n",
     "# the results and bindings elements of the response.\n",
     "\n",
-    "quant_response = requests.get(\"https://qudt.org/fuseki/qudt/query?query=PREFIX qudt: <http://qudt.org/schema/qudt/> PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema%23> SELECT ?qk ?qkl WHERE { ?qk a qudt:QuantityKind . ?qk rdfs:label ?qkl . }\", headers=my_headers)\n",
+    "quant_response = requests.get(\"https://qudt.org/fuseki/qudt/query?query=PREFIX qudt: <http://qudt.org/schema/qudt/> PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema%23> SELECT ?qk ?qkl WHERE { ?qk a qudt:QuantityKind . ?qk rdfs:label ?qkl . } \", headers=my_headers)\n",
     "qdata          = quant_response.json()\n",
     "qresults       = qdata['results']\n",
     "qbinds         = qresults['bindings']\n",
@@ -90,7 +90,7 @@
     "\n",
     "quant_dd = widgets.Dropdown(\n",
     "    options     = quant_labels,\n",
-    "    description = 'Desired Quantity:',\n",
+    "    description = 'Desired Quantity Kind:',\n",
     "    style       = label_style,\n",
     "    disabled    = False,\n",
     ")\n",
@@ -105,7 +105,7 @@
     "def start_units_get_request(selected_quant):\n",
     "    stunit_query_start = \"https://qudt.org/fuseki/qudt/query?query=PREFIX qudt: <http://qudt.org/schema/qudt/> PREFIX quantitykind: <http://qudt.org/schema/qudt/quantitykind/> PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema%23> SELECT ?stunit ?stunit_label WHERE { <\"\n",
     "    stunit_query_quant = quant_values[quant_dd.index]\n",
-    "    stunit_query_end   = \"> qudt:applicableUnit ?stunit . ?stunit rdfs:label ?stunit_label . }\"\n",
+    "    stunit_query_end   = \"> qudt:applicableUnit ?stunit . ?stunit rdfs:label ?stunit_label . } \"\n",
     "    stunit_query       = stunit_query_start + selected_quant + stunit_query_end\n",
     "\n",
     "    stunit_response = requests.get(stunit_query, headers = my_headers)\n",
@@ -180,7 +180,7 @@
     "    unit_query_quant     = quant_values[quant_dd.index]\n",
     "    tgtunit_query_middle = \"> qudt:applicableUnit ?tgtunit . ?tgtunit rdfs:label ?tgtunit_label . FILTER (?tgtunit != <\"\n",
     "    stunit_value         = stunits[start_unit_dd.index]\n",
-    "    tgtunit_query_end    = \">) . }\"\n",
+    "    tgtunit_query_end    = \">) . } \"\n",
     "    tgtunit_query        = tgtunit_query_start + selected_quant + tgtunit_query_middle + stunit_value + tgtunit_query_end\n",
     "\n",
     "    tgtunit_response = requests.get(tgtunit_query, headers = my_headers)\n",
