Changed the qk query to order by label, added a formal debugging function and flag, added some clarity to distinguish between text length positive and text length 0, and removed the requirement that the target unit not include the starting unit

--- a/quct.ipynb
+++ b/quct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "023e2690",
    "metadata": {
     "scrolled": false
@@ -10,24 +10,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "['_model_module',\n",
-       " '_model_module_version',\n",
-       " '_model_name',\n",
-       " '_view_count',\n",
-       " '_view_module',\n",
-       " '_view_module_version',\n",
-       " '_view_name',\n",
-       " 'description_width']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1c3dcb21baa4d8aa906a72b51c8d845",
+       "model_id": "0ff6b5f6db524304a9833776f94d3f74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,6 +31,12 @@
     "import ipyvuetify as viewtify\n",
     "\n",
     "my_headers = {'accept' : 'application/json'}\n",
+    "debug_flag = False\n",
+    "\n",
+    "def debug(*args):\n",
+    "    if (debug_flag == True):\n",
+    "        for arg in args:\n",
+    "            print(arg)\n",
     "\n",
     "# Initialize the app title, help Text widget and start_value Text widget\n",
     "\n",
@@ -67,7 +57,7 @@
     "\n",
     "def qk_get_request():\n",
     "    qk_query_start = \"https://qudt.org/fuseki/qudt/query?query=PREFIX qudt: <http://qudt.org/schema/qudt/> PREFIX quantitykind: <http://qudt.org/schema/qudt/quantitykind/> PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema%23> PREFIX fn: <http://www.w3.org/2005/xpath-functions%23> SELECT ?qk ?qkl ?qks WHERE { ?qk a qudt:QuantityKind . ?qk rdfs:label ?qkl . ?qk qudt:symbol ?qks . FILTER (fn:starts-with(?qkl, %22\"\n",
-    "    qk_query_end   = \"%22)) . }\"\n",
+    "    qk_query_end   = \"%22)) . } ORDER BY ?qkl\"\n",
     "    qk_query       = qk_query_start + qk_text.value + qk_query_end\n",
     "    qk_response    = requests.get(qk_query, headers = my_headers)\n",
     "    qk_data        = qk_response.json()\n",
@@ -147,12 +137,15 @@
     "\n",
     "# Initialize the start_unit_dd content (options) by calling the request and constructing the values and labels arrays\n",
     "\n",
-    "qk_binds     = qk_get_request()\n",
-    "qk_values    = get_qk_values(qk_binds)\n",
-    "qk_labels    = get_qk_labels(qk_binds)\n",
-    "qk_symbols   = get_qk_symbols(qk_binds)\n",
-    "qk_ls_and_ss = get_qk_labels_and_symbols(qk_labels, qk_symbols)\n",
-    "qk_text_len  = 0\n",
+    "qk_binds       = qk_get_request()\n",
+    "qk_values      = get_qk_values(qk_binds)\n",
+    "qk_labels      = get_qk_labels(qk_binds)\n",
+    "qk_symbols     = get_qk_symbols(qk_binds)\n",
+    "qk_values_cur  = qk_values\n",
+    "qk_labels_cur  = qk_labels\n",
+    "qk_symbols_cur = qk_symbols\n",
+    "qk_ls_and_ss   = get_qk_labels_and_symbols(qk_labels, qk_symbols)\n",
+    "qk_text_len    = 0\n",
     "\n",
     "# Construct the ls_qk_dd Dropdown widget\n",
     "\n",
@@ -188,10 +181,17 @@
     "# CALLS:     [python] startswith, append\n",
     "\n",
     "def restrict_qk_labels(vlist, llist, slist, txt):\n",
+    "    debug('In restrict_qk_labels - Start', llist[0], vlist[0])\n",
+    "    global qk_values_cur\n",
+    "    global qk_labels_cur\n",
+    "    global qk_symbols_cur\n",
     "    filtered_values  = []\n",
     "    filtered_labels  = []\n",
     "    filtered_symbols = []\n",
     "    i                = 0\n",
+    "    qk_values_cur    = vlist\n",
+    "    qk_labels_cur    = llist\n",
+    "    qk_symbols_cur   = slist\n",
     "    while i < len(llist):\n",
     "        item = llist[i]\n",
     "        if item.startswith(txt):\n",
@@ -200,10 +200,23 @@
     "            filtered_symbols.append(slist[i])\n",
     "        i += 1\n",
     "\n",
+    "    debug('In restrict_qk_labels - End', filtered_labels[0], filtered_values[0])\n",
     "    return filtered_labels, filtered_symbols, filtered_values\n",
     "\n",
     "# update_options_from_input_text: Performs qk model update downstream of a changed selection in the qk_text\n",
     "#                                 text box.\n",
+    "#\n",
+    "# ALGORITHM: (1) Declare quk_text_len as global so that we can modify it here\n",
+    "#            (2) Test to see if the length of qk_text.value is larger than qk_text_len (i.e., did we add chars)\n",
+    "#                (a) If so, define qk_values_start, qk_labels_start, and qk_symbols_start based on the current\n",
+    "#                    options lists\n",
+    "#                (b) Else if the length of qk_text.value is positive define them based on the last current lists\n",
+    "#                (c) Otherwise define them based on the original list (means we back spaced to empty text)\n",
+    "#            (3) Call restrict_qk_labels on the '_start' lists\n",
+    "#            (4) Test the length of result[0] to see if it is positive\n",
+    "#                (a) If so, define the dropdown lists values based on the results\n",
+    "#                (b) Otherwise reset the value of qk_text.value to be the old value minus the last character\n",
+    "#            (5) Call update_options_from_selected_quantity\n",
     "#\n",
     "# CALLED BY: on_change_qkt\n",
     "# CALLS:     restrict_qk_labels\n",
@@ -211,16 +224,20 @@
     "def update_qk_options_from_input_text(*args): # *args represent zero (case here) or more arguments.\n",
     "    global qk_text_len\n",
     "    qk_text_v = qk_text.value if qk_text.value else \"\"\n",
-    "    if len(qk_text.value) > qk_text_len:\n",
+    "    if len(qk_text_v) > qk_text_len:\n",
     "        qk_values_start  = qkv_dd.options # qk_values\n",
     "        qk_labels_start  = qk_dd.options  # qk_labels # qk_dd.options\n",
     "        qk_symbols_start = qks_dd.options # qk_symbols\n",
+    "    elif len(qk_text_v) > 0:\n",
+    "        qk_values_start  = qk_values_cur\n",
+    "        qk_labels_start  = qk_labels_cur\n",
+    "        qk_symbols_start = qk_symbols_cur\n",
     "    else:\n",
     "        qk_values_start  = qk_values\n",
     "        qk_labels_start  = qk_labels\n",
     "        qk_symbols_start = qk_symbols\n",
-    "    qk_text_len      = len(qk_text.value)\n",
-    "    result           = restrict_qk_labels(qk_values_start, qk_labels_start, qk_symbols_start, qk_text_v)\n",
+    "    qk_text_len = len(qk_text.value)\n",
+    "    result      = restrict_qk_labels(qk_values_start, qk_labels_start, qk_symbols_start, qk_text_v)\n",
     "    if len(result[0]) > 0:\n",
     "        qk_dd.options  = result[0]\n",
     "        qks_dd.options = result[1]\n",
@@ -228,7 +245,6 @@
     "    else:\n",
     "        qk_text_start = qk_text.value\n",
     "        qk_text.value = qk_text_start[0: qk_text_len - 1:1]\n",
-    "\n",
     "    # update everything else\n",
     "    update_options_from_selected_quantity()\n",
     "\n",
@@ -324,11 +340,14 @@
     "#            update_options_from_selected_start_unit\n",
     "\n",
     "def target_units_get_request(selected_qk, stunits):\n",
-    "    tgtunit_query_start  = \"https://qudt.org/fuseki/qudt/query?query=PREFIX qudt: <http://qudt.org/schema/qudt/> PREFIX quantitykind: <http://qudt.org/vocab/quantitykind/> PREFIX unit: <http://qudt.org/vocab/unit/> PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema%23> SELECT ?tgtunit ?tgtunit_label WHERE { <\"\n",
-    "    tgtunit_query_middle = \"> qudt:applicableUnit ?tgtunit . ?tgtunit rdfs:label ?tgtunit_label . FILTER (?tgtunit != <\"\n",
-    "    stunit_value         = stunits[start_unit_dd.index]\n",
-    "    tgtunit_query_end    = \">) . }\"\n",
-    "    tgtunit_query        = tgtunit_query_start + selected_qk + tgtunit_query_middle + stunit_value + tgtunit_query_end\n",
+    "    tgtunit_query_start = \"https://qudt.org/fuseki/qudt/query?query=PREFIX qudt: <http://qudt.org/schema/qudt/> PREFIX quantitykind: <http://qudt.org/schema/qudt/quantitykind/> PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema%23> SELECT ?tgtunit ?tgtunit_label WHERE { <\"\n",
+    "    tgtunit_query_end   = \"> qudt:applicableUnit ?tgtunit . ?tgtunit rdfs:label ?tgtunit_label . }\"\n",
+    "    tgtunit_query       = tgtunit_query_start + selected_qk + tgtunit_query_end\n",
+    "#    tgtunit_query_start  = \"https://qudt.org/fuseki/qudt/query?query=PREFIX qudt: <http://qudt.org/schema/qudt/> PREFIX quantitykind: <http://qudt.org/vocab/quantitykind/> PREFIX unit: <http://qudt.org/vocab/unit/> PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema%23> SELECT ?tgtunit ?tgtunit_label WHERE { <\"\n",
+    "#    tgtunit_query_middle = \"> qudt:applicableUnit ?tgtunit . ?tgtunit rdfs:label ?tgtunit_label . FILTER (?tgtunit != <\"\n",
+    "#    stunit_value         = stunits[start_unit_dd.index]\n",
+    "#    tgtunit_query_end    = \">) . }\"\n",
+    "#    tgtunit_query        = tgtunit_query_start + selected_qk + tgtunit_query_middle + stunit_value + tgtunit_query_end\n",
     "    tgtunit_response     = requests.get(tgtunit_query, headers = my_headers)\n",
     "    tgtudata             = tgtunit_response.json()\n",
     "    tgturesults          = tgtudata['results']\n",
@@ -462,8 +481,10 @@
     "#            target_unit_cm_get_request\n",
     "\n",
     "def update_options_from_selected_quantity(*args): # *args represent zero (case here) or more arguments.\n",
+    "    debug('In update_options_from_selected_quantity - Start', qkv_dd.options[0], qk_dd.options[0])\n",
     "    qk_options             = qkv_dd.options\n",
     "    selected_qk            = qk_options[qk_dd.index if qk_dd.index else 0] # qk_values\n",
+    "    debug('Selected qk', selected_qk)\n",
     "    stubinds               = start_units_get_request(selected_qk)\n",
     "    stunit_values          = get_stuvalues(stubinds)\n",
     "    stunit_labels          = get_stulabels(stubinds)\n",
